<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="14dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/button_back"
            android:layout_width="@dimen/image_btn_size"
            android:layout_height="@dimen/image_btn_size"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="4dp"
            android:src="@drawable/vector_back" />

        <TextView
            android:id="@+id/header_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:gravity="center_vertical"
            android:text="@string/settings"
            android:textColor="@color/black_text_in_button"
            android:textSize="@dimen/text_title"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="24dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_rows_settings"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_theme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/night_theme"
                android:textColor="@color/black_text_in_button"
                android:textSize="@dimen/text_regular" />

            <Switch
                android:id="@+id/switch_theme"
                android:layout_width="56dp"
                android:layout_height="40dp"
                android:checked="false" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_rows_settings"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/share"
                android:textColor="@color/black_text_in_button"
                android:textSize="@dimen/text_regular" />

            <ImageButton
                android:id="@+id/button_share"
                android:layout_width="@dimen/image_btn_size"
                android:layout_height="@dimen/image_btn_size"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:padding="6dp"
                android:src="@drawable/vector_share" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_rows_settings"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_support"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/write_to_support"
                android:textColor="@color/black_text_in_button"
                android:textSize="@dimen/text_regular" />

            <ImageButton
                android:id="@+id/button_support"
                android:layout_width="@dimen/image_btn_size"
                android:layout_height="@dimen/image_btn_size"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:padding="6dp"
                android:src="@drawable/support" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_rows_settings"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_user_agreement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/user_agreement"
                android:textColor="@color/black_text_in_button"
                android:textSize="@dimen/text_regular" />

            <ImageButton
                android:id="@+id/button_user_agreement"
                android:layout_width="@dimen/image_btn_size"
                android:layout_height="@dimen/image_btn_size"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:padding="6dp"
                android:src="@drawable/vector_arrow_forward" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>